fixed overflow on landing page

--- a/styles/home.css
+++ b/styles/home.css
@@ -122,16 +122,16 @@ body {
     width: 100%;
 }
 
+.tabbed-section {
+    overflow: hidden;
+}
+
 [data-tab-content] {
     display: none;
-    width: 90%;
-    margin: 0 auto;
 }
 
 .active[data-tab-content] {
     display: block;
-    width: 90%;
-    margin: 0 auto;
 }
 
 
@@ -492,11 +492,6 @@ body {
 @media (max-width: 600px) {
     .content-text {
         padding: 1rem;
-    }
-
-    .tab-content {
-        width: 90%;
-        margin: 0 auto;
     }
 
     /* .content-img {
